feat: API 兼容性适配层集成到 RAG Pipeline
- SpringAiConfig 新增 apiCompatibilityAdapter Bean（根据 provider/base-url 自动选择适配器）
- RerankAdvisor 注入 ApiCompatibilityAdapter：支持多 system 消息时用 augmentSystemMessage，否则降级为 augmentUserMessage
- adapter/ 包新增：ApiCompatibilityAdapter 接口 + OpenAiCompatibleAdapter + MiniMaxAdapter + ApiAdapterFactory
- RerankAdvisorTest 从 9→11 测试：新增 OpenAi/MiniMax 适配器注入策略验证
- AdvisorChainIntegrationTest 适配新行为（system message 注入）
- 311 测试全通